# iced_rivet

./: Cargo.toml  makefile  readme.md
examples/client_decorations/: Cargo.toml
examples/client_decorations/src/: main.rs
examples/plugin/example/: Cargo.toml
examples/plugin/example/src/: main.rs
examples/plugin/my_plugin/: Cargo.toml
examples/plugin/my_plugin/src/: lib.rs
examples/plugin/plugin_1/: Cargo.toml
examples/plugin/plugin_1/src/: lib.rs
examples/plugin/plugin_2/: Cargo.toml
examples/plugin/plugin_2/src/: lib.rs
examples/plugin/plugin_example/: Cargo.toml
examples/plugin/plugin_example/src/: main.rs
iced_decorator/: Cargo.toml  readme.md
iced_decorator/src/: drag_window.rs  lib.rs  resize_handler.rs  resizer.rs  svgs.rs  traits.rs  window.rs
iced_decorator/src/helpers/: mod.rs  reizer_operation.rs  traits.rs
iced_decorator/src/theming/: mod.rs  panel_buttons.rs
iced_plugin/: Cargo.toml  readme.md
iced_plugin/src/: lib.rs
iced_window/: Cargo.toml  readme.md
iced_window/src/: drag_window.rs  resize_handler.rs  svgs.rs  window.rs
src/: lib.rs
