[package]
edition = "2021"
name = "iced_rivet"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.package]
authors = ["Night Hunter"]
categories = ["gui"]
description = "A collection of utilities for iced gui framework"
keywords = ["gui", "ui", "graphics", "interface", "widgets"]
repository = "https://github.com/n1ght-hunter/iced_rivet"

[dependencies]
iced_decorator = {workspace = true, optional = true}

[features]
default = []
decorator = ["iced_decorator"]

[workspace.dependencies]
iced_decorator = {path = "iced_decorator"}

# iced = "0.12.0"
iced = { git = "https://github.com/iced-rs/iced.git", rev="2f289af93c0bfef51698e1aca50696aef1cc6ecc", features = ["advanced", "svg"] }
lazy_static = "1.4.0"

[workspace]
members = [
  "iced_decorator",
  "examples/*",
]
resolver = "2"
