[package]
name = "iced_decorator"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { workspace = true, features = ["advanced", "svg"] }