[package]
name = "plugin_example"
version = "0.1.0"
edition = "2021"
authors.workspace = true
categories.workspace = true
description.workspace = true
keywords.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_plugin.workspace = true
iced.workspace = true
